--- a/web/public/board.html
+++ b/web/public/board.html
@@ -28,6 +28,7 @@
         <button type="submit">Submit</button>
         <button type="button" id="cancel-post">Cancel</button>
       </div>
+      <div id="form-ad-box">[Ad Placeholder]</div>
     </form>
 
     <!-- 하단 고정 바 -->
