--- a/web/public/index.html
+++ b/web/public/index.html
@@ -50,6 +50,7 @@
 
   <!-- 소켓 스크립트 -->
   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+  <script src="/socket-manager.js"></script>
   <script src="/script.js"></script>
 </body>
 </html>
